--- a/html/europe.html
+++ b/html/europe.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>港风调色教程</title>
+    <title>欧美风调色教程</title>
     <link rel="stylesheet" href="../css/base.css">
     <link rel="stylesheet" href="../css/jquery-kq-nav-left.css">
     <link rel="stylesheet" href="https://www.jq22.com/jquery/bootstrap-3.3.4.css">
@@ -19,7 +19,7 @@
         }
 
         html, body {
-            width:100%;
+            width: 100%;
             height: 100%;
             background-image: url(../image/video_bg.jpg);
             background-size: 100% 100%;
@@ -37,14 +37,14 @@
             margin: auto;
             box-sizing: border-box;
             /*background-color: darkred;*/
-            padding-right:0;
+            padding-right: 0;
         }
 
         #title_side {
-            width:100%;
+            width: 100%;
             height: 22%;
             /*background-color: forestgreen;*/
-            position:relative;
+            position: relative;
         }
 
         #pic_arrow {
@@ -55,7 +55,7 @@
         }
 
         .title {
-            position:absolute;
+            position: absolute;
             font-size: 50px;
             font-family: HYZHONGXIUTIJ;
             color: #c3c1c7;
@@ -63,8 +63,8 @@
             opacity: 0.9;
             /*border: 7px solid white;*/
             text-align: center;
-            bottom:-15%;
-            width:100%;
+            bottom: -15%;
+            width: 100%;
         }
 
 
@@ -103,7 +103,7 @@
             font-family: HYZHONGXIUTIJ;
             word-spacing: 2.4vh;
             color: white;
-            margin-top:-3%;
+            margin-top: -3%;
         }
 
             .btn:hover /*鼠标经过变色*/ {
@@ -140,7 +140,7 @@
             width: 80%;
             height: 75%;
             top: calc((100% - 450px)/2);
-            left:14%;
+            left: 14%;
             position: absolute;
 			z-index: 2;
         }
@@ -169,7 +169,7 @@
 
 <body style="overflow-x:hidden;overflow-y:hidden">
     <ul class="nav-left-container">
-        
+     
         <li>
             <a href="index.html">
                 <span class="glyphicon glyphicon-hourglass" aria-hidden="true"></span>
@@ -250,24 +250,24 @@
 
         <div id="title_side">
             <!--<img id="pic_arrow" src="../image/t_arrow.png" alt="" />-->
-            <p class="title">港风调色教程</p>
+            <p class="title">欧美风调色教程</p>
         </div>
 
         <div id="text_side">
 
             <div id="slide">
-                <div class="funnyNewsTicker fnt-radius fnt-shadow fnt-easing" id="funnyNewsTicker1" >
+                <div class="funnyNewsTicker fnt-radius fnt-shadow fnt-easing" id="funnyNewsTicker1">
                     <ul>
-                        <li class="fnt-top1">
+                        <li class="fnt-top1">.
                             <div class="fnt-content text">
-                                <p><strong>一、港风复古滤镜特点</strong><br>1.高光表现为强烈橙黄色<br>2.阴影为明显青红色<br>3.整体色彩对比强烈</p>
+                                <p><strong>一、欧美风滤镜特点</strong><br>1.普遍对比度较高<br>2.亮度较低<br>3.色彩比较艳丽</p>
                             </div>
                             <div class="fnt-info"><span>3 / 10</span></div>
                         </li>
                         <li class="fnt-top1">
                             <div class="fnt-content text">
                                 <p>
-                                    <strong>二、原片分析</strong><br>1.色彩对比不够强烈<br>2.整体过亮
+                                    <strong>二、原片分析</strong><br>1.高光过曝 整体较亮<br>2.颜色不够深 缺乏质感
                                 </p>
                             </div>
                             <div class="fnt-info"><span>3 / 10</span></div>
@@ -286,50 +286,44 @@
                         </li>
                         <li class="fnt-top1">
                             <div class="fnt-content text">
-                                3.进入基础调整：<br>(1).色温【-21】色调【+45】：调整至冷色偏紫
-                                <br>(2).曝光【-0.7】：整体下移，营造暗氛围
+                                3.进入基础调整：<br>(1).色调【-18】：调整至暗绿色调
+                                <br>(2).曝光【-0.3】：整体下移，营造暗氛围
                             </div>
                             <div class="fnt-info"><span>3 / 10</span></div>
                         </li>
                         <li class="fnt-top1">
                             <div class="fnt-content text">
-                                (4).高光【+12】和阴影【+3】：适当增加<br>
-                                (5).提亮白色部分【+17】，加深黑色部分【-30】<br>
+                                (4).对比度【+18】<br>
+                                (5).降低高光【-66】<br>同时增加阴影【-25】<br>
                             </div>
                             <div class="fnt-info"><span></span></div>
                         </li>
                         <li class="fnt-top1">
-                            <div class="fnt-content text">(6).清晰度【+13】饱和度【+16】：适当增加，使得颜色图片加深</div>
-                            <div class="fnt-info"><span>4 / 10</span></div>
-                        </li>
-                        <li class="fnt-top1">
                             <div class="fnt-content text">
-                                4.HSL调整：
-                                色相、饱和度、明亮度部分：
-                                降低蓝色（范围：【-15】-【0】）和增加紫色（范围：【5】-【10】）
+                                (6).降低白色部分【-35】，加深黑色部分【-31】<br>
+                                (7).清晰度【+38】：使得颜色图片更有质感
                             </div>
                             <div class="fnt-info"><span>4 / 10</span></div>
                         </li>
                         <li class="fnt-top1">
                             <div class="fnt-content text">
-                                5.色调分离：
-                                <br>(1).高光：色相【+57】调至黄色，饱和度【+59】
-                                <br>(2).阴影：色相【+198】调至青色，饱和度【+6】
-                            </div>
-                            <div class="fnt-info"><span>4 / 10</span></div>
-                        </li>
-                        <li class="fnt-top1">
-                            <div class="fnt-content text">
-                                6.效果：增加老照片感
-                                <br>(1).颗粒数量【+33】
-                                <br>(2).晕染数量【-8】
-                            </div>
-                            <div class="fnt-info"><span>4 / 10</span></div>
-                        </li>
-                        <li class="fnt-top1">
-                            <div class="fnt-content text">
-                                7.色调曲线：
+                                4.色调曲线：
                                 <br>增加图片灰度，使用S曲线适当增加对比度
+                            </div>
+                            <div class="fnt-info"><span>4 / 10</span></div>
+                        </li>
+                        <li class="fnt-top1">
+                            <div class="fnt-content text">
+                                5.细节：
+                                <br>锐化数量【+42】：达到刻痕效果
+                            </div>
+                            <div class="fnt-info"><span>4 / 10</span></div>
+                        </li>
+                        <li class="fnt-top1">
+                            <div class="fnt-content text">
+                                6.HSL调整：
+                                <br>饱和度、明亮度部分：
+                                <br>主要调整绿色【-37】
                             </div>
                             <div class="fnt-info"><span>4 / 10</span></div>
                         </li>
@@ -340,7 +334,7 @@
         <div id="video_side">
             <input class="btn" type=button value="返回色调界面" onclick="javascript:window.location.href='colourstyle.html'">
             <video controls="controls" autoplay="autoplay">
-                <source src="../videos/hongkong.mp4">
+                <source src="../videos/europe.mp4">
             </video>
         </div>
 
