--- a/html/yindao.html
+++ b/html/yindao.html
@@ -16,6 +16,15 @@
             margin: 0
         }
 
+        a:focus {
+            outline: none;
+            -moz-outline: none;
+        }
+
+        *:focus {
+            outline: none;
+        }
+
         body {
             background-color: #080615;
         }
@@ -118,7 +127,7 @@
 
 <body style="overflow-x:hidden;overflow-y:hidden">
     <ul class="nav-left-container">
-        <div id="course_title">Photoshop<br>基本后期调色</div>
+        
         <li>
             <a href="index.html">
                 <span class="glyphicon glyphicon-hourglass" aria-hidden="true"></span>
@@ -152,6 +161,9 @@
                 <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
             </a>
             <ul class="nav-left-container-small">
+				<li>
+                    <a class="J_menuItem" href="colourstyle-tool.html">调色工具介绍</a>
+                </li>
                 <li>
                     <a class="J_menuItem" href="colourstyle.html">色调类型</a>
                 </li>
@@ -232,7 +244,7 @@
                             <img src="image/composition/2.jpg" alt="Previous thumb" />
                         </div>
                     </a>-->
-                    <a class="next" href="sanfen.html">
+                    <a class="next" onclick="window.location.href='sanfen.html'">
                         <span class="icon-wrap"><svg class="icon" width="32" height="32" viewBox="0 0 64 64"><use xlink:href="#arrow-right-1"></use></svg></span>
                         <div>
                             <h3>三分构图法</h3>
