--- a/html/PS-structure-video.html
+++ b/html/PS-structure-video.html
@@ -1,20 +1,21 @@
-﻿<!doctype html>
+<!doctype html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>裁剪工具</title>
-    <link rel="stylesheet" type="text/css" href="../css/slide.css" />
+<meta charset="utf-8">
+<title>裁剪工具</title>
+	<link rel="stylesheet" href="../css/PS-structure-video.css">
+	
+	<link rel="stylesheet" href="https://www.jq22.com/jquery/bootstrap-3.3.4.css">
     <link rel="stylesheet" href="../css/base.css">
     <link rel="stylesheet" href="../css/jquery-kq-nav-left.css">
-    <link rel="stylesheet" href="https://www.jq22.com/jquery/bootstrap-3.3.4.css">
     <script src="https://www.jq22.com/jquery/jquery-1.10.2.js"></script>
-
-    <link rel="stylesheet" href="../css/PS-structure-video.css">
+	<script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
+	 <script type="text/javascript" src="../js/jquery-1.9.1.js"></script>
 </head>
 
 <body>
-    <ul class="nav-left-container">
-        <div id="course_title">Photoshop<br>基本后期调色</div>
+	
+	<ul class="nav-left-container">
         <li>
             <a href="index.html">
                 <span class="glyphicon glyphicon-hourglass" aria-hidden="true"></span>
@@ -48,6 +49,9 @@
                 <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
             </a>
             <ul class="nav-left-container-small">
+				<li>
+                    <a class="J_menuItem" href="colourstyle-tool.html">调色工具介绍</a>
+                </li>
                 <li>
                     <a class="J_menuItem" href="colourstyle.html">色调类型</a>
                 </li>
@@ -77,7 +81,7 @@
         </li>
     </ul>
     <script>
-        $('.nav-left-container').on('click', 'li', function () {
+        $('.nav-left-container').on('click', 'li', function() {
             $(this).find('.glyphicon-menu-right').removeClass('glyphicon-menu-right').addClass('glyphicon-menu-down');
             $(this).addClass('active').children('.nav-left-container-small').slideDown()
 
@@ -85,16 +89,17 @@
             $(this).siblings().find('.glyphicon-menu-down').removeClass('glyphicon-menu-down').addClass('glyphicon-menu-right ');
         })
     </script>
-    <div class="container">
-        <img src="../imgs/step.png" height="80%" width="36%" style="position:absolute;top:10%;left: 10px;" />
-        <div class="vid">
-            <video controls="controls" autoplay="autoplay" style="width:62%;height:80%;position:absolute;top: 0;right: 0;">
-                <source src="../videos/structure.mp4">
-            </video>
-        </div>
-        <div class="switch">
-            <a class="Back" href="structure-tool.html">返回构图界面</a>
-        </div>
-    </div>
+	<div class="container" style="width:1000px;height:550px;position: absolute;top:50%;margin-top:-250px;left:50%;margin-left: -500px;">
+		<p style="font-size:50px;width: 300px;height:60px;line-height:60px;text-align: center;position: absolute;left:50%;margin-left:-140px;top:4px;color: #E7E7E7;letter-spacing: 2px;">PS构图教程</p>
+		<img src="../imgs/shiping.png" height="480px" width="36%" style="position:absolute;bottom:20px;left: 10px;"/>
+		<div class="vid">
+		<video  controls="controls" autoplay="autoplay" style="width:62%;height:80%;position:absolute;top:30px;right: 0;">
+			<source src="../videos/structure.mp4" >
+			</video>
+		</div>
+		<div class="switch">
+			<a class="Back" href="structure-tool.html">返回构图界面</a>
+		</div>
+	</div>
 </body>
 </html>
