--- a/html/composition.html
+++ b/html/composition.html
@@ -15,16 +15,18 @@
         }
 
         body {
-            background-image: url(../image/1.jpg);
+            background-color: #080615;
+            /*background-image: url(../image/1.jpg);*/
         }
 
         .container { /*最大的div*/
-            width: 820px;
+            width: 800px;
             height: 100vh;
             display: flex;
-            margin: auto;
+            margin-left:auto;
             box-sizing: border-box;
             position: relative;
+            /*background-color: rebeccapurple;*/
         }
 
         .album { /*图片*/
@@ -52,35 +54,50 @@
             -ms-transform: scale(1.1);
         }
 
-        #over1 {
+        #yindao {
             position: absolute;
-            left: 53%;
-            top: 5%;
-            width: 460px;
-            width: 56%;
+            left: 0;
+            bottom: 2%;
+            height: 50%;
+            z-index: 3;
         }
 
-        #over2 {
+        #sanfen {
             position: absolute;
-            left: 42%;
-            top: 39%;
-            width: 245px;
-            width: 30%;
+            left: 17%;
+            top: 20%;
+            height: 50%;
+            z-index: 2;
         }
 
-        #over3 {
+        #duijiao {
             position: absolute;
-            left: 70%;
-            top: 60%;
-            //height:210px;
-            width: 38%;
+            right: 0;
+            top: 2%;
+            height: 50%;
+            z-index: 1;
+        }
+
+        #duichen {
+            position: absolute;
+            right: 2%;
+            bottom: 3%;
+            height: 40%;
+            z-index: 1;
+        }
+
+        #title {
+            position: absolute;
+            z-index: 4;
+            height: 40%;
+            left: -2%;
         }
     </style>
 </head>
 
 <body style="overflow-x:hidden;overflow-y:hidden">
     <ul class="nav-left-container">
-        <div id="course_title">Photoshop<br>基本后期调色</div>
+       
         <li>
             <a href="index.html">
                 <span class="glyphicon glyphicon-hourglass" aria-hidden="true"></span>
@@ -114,6 +131,9 @@
                 <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
             </a>
             <ul class="nav-left-container-small">
+				<li>
+                    <a class="J_menuItem" href="colourstyle-tool.html">调色工具介绍</a>
+                </li>
                 <li>
                     <a class="J_menuItem" href="colourstyle.html">色调类型</a>
                 </li>
@@ -153,16 +173,19 @@
     </script>
 
     <div class="container">
+        <img id="title" alt="" src="../image/composition/title.png">
         <ul>
-            <li class="album"><a href="yindao.html"><img border="10" alt="" src="../image/composition/03.jpg" onmouseout="this.src='../image/composition/3.jpg'" onmouseover="this.src='../image/composition/03.jpg" /></a></li>
             <li class="album">
-                <a href="sanfen.html"><img id="over1" border="10" alt="" src="../image/composition/1.jpg" onmouseout="this.src='../image/composition/1.jpg'" onmouseover="this.src='../image/composition/1.jpg" /></a>
+                <a href="yindao.html"><img img id="yindao" border="10" alt="" src="../image/composition/03.jpg" onmouseout="this.src='../image/composition/3.jpg'" onmouseover="this.src='../image/composition/03.jpg" /></a>
             </li>
             <li class="album">
-                <a href="duijiao.html"><img id="over2" border="10" alt="" src="../image/composition/04.jpg" onmouseout="this.src='../image/composition/004.jpg'" onmouseover="this.src='../image/composition/04.jpg" /></a>
+                <a href="sanfen.html"><img id="sanfen" border="10" alt="" src="../image/composition/1.jpg" onmouseout="this.src='../image/composition/1.jpg'" onmouseover="this.src='../image/composition/1.jpg" /></a>
             </li>
             <li class="album">
-                <a href="duichen.html"><img id="over3" alt="" border="10px" src="../image/composition/02.jpg" onmouseout="this.src='../image/composition/2.jpg'" onmouseover="this.src='../image/composition/02.jpg" /></a>
+                <a href="duijiao.html"><img id="duijiao" border="10" alt="" src="../image/composition/004.jpg" onmouseout="this.src='../image/composition/004.jpg'" onmouseover="this.src='../image/composition/04.jpg" /></a>
+            </li>
+            <li class="album">
+                <a href="duichen.html"><img id="duichen" alt="" border="10px" src="../image/composition/02.jpg" onmouseout="this.src='../image/composition/2.jpg'" onmouseover="this.src='../image/composition/02.jpg" /></a>
             </li>
         </ul>
     </div>
