--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,7 @@
         }
 
         .container { /*最大的div*/
-            background-image: url("../image/index1.jpg");
+            background-image: url("image/index1.jpg");
             width: 100%;
             height: 100vh;
             margin: auto;
@@ -62,7 +62,7 @@
 
         @font-face {
             font-family: "HYZHONGXIUTIJ";
-            src: url("../font/HYZHONGXIUTIJ.TTF")
+            src: url("font/HYZHONGXIUTIJ.TTF")
         }
 
         /*按钮*/
@@ -100,9 +100,9 @@
             margin-top: 50px;
             background-color: transparent;
             /*字体*/
-            font-size: 2.4vh;
+            font-size: 3vh;
             font-family: HYZHONGXIUTIJ;
-            word-spacing: 6rem;
+            letter-spacing:5px;
             /*鼠标放上时背景变化时间*/
             transition: background-color 1.4s ease;
             -webkit-transition: background-color 1.4s ease;
@@ -138,18 +138,18 @@
     <div class="container">
         <div id="title_slide">
             <p class="title" id="t_Entlish">Photoshop</p>
-            <p class="title" id="t_Chinese">基本后期调色</p>
+            <p class="title" id="t_Chinese">基础后期构图与调色</p>
         </div>
 
 
         <div id="button_slide">
             <div id="button_slide_left">
-                <input class="btn btn_left" type=button value="构图" onclick="window.open('composition.html')">
-                <input class="btn btn_left" type=button value="调色" onclick="window.open('colourstyle.html')">
+                <input class="btn btn_left" type=button value="构图" onclick="window.open('../html/composition.html')">
+                <input class="btn btn_left" type=button value="调色" onclick="window.open('html/colourstyle.html')">
             </div>
             <div id="button_slide_right">
-                <input class="btn btn_right" type=button value="测试" onclick="window.open('main-test.html')">
-                <input class="btn btn_right" type=button value="相册" onclick="window.open('album.html')">
+                <input class="btn btn_right" type=button value="测试" onclick="window.open('html/main-test.html')">
+                <input class="btn btn_right" type=button value="相册" onclick="window.open('html/album.html')">
             </div>
         </div>
     </div>
