--- a/html/sanfen.html
+++ b/html/sanfen.html
@@ -14,6 +14,14 @@
             padding: 0;
             margin: 0
         }
+        a:focus {
+            outline: none;
+            -moz-outline: none;
+        }
+
+        *:focus {
+            outline: none;
+        }
 
         body {
             background-color: #080615;
@@ -107,7 +115,7 @@
 
 <body style="overflow-x:hidden;overflow-y:hidden">
     <ul class="nav-left-container">
-        <div id="course_title">Photoshop<br>基本后期调色</div>
+        
         <li>
             <a href="index.html">
                 <span class="glyphicon glyphicon-hourglass" aria-hidden="true"></span>
@@ -141,6 +149,9 @@
                 <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
             </a>
             <ul class="nav-left-container-small">
+				<li>
+                    <a class="J_menuItem" href="colourstyle-tool.html">调色工具介绍</a>
+                </li>
                 <li>
                     <a class="J_menuItem" href="colourstyle.html">色调类型</a>
                 </li>
@@ -213,7 +224,7 @@
                             <img src="image/composition/3.jpg" alt="Previous thumb" />
                         </div>
                     </a>-->
-                    <a class="next" href="duijiao.html">
+                    <a class="next" onclick="window.location.href='duijiao.html'">
                         <span class="icon-wrap"><svg class="icon" width="32" height="32" viewBox="0 0 64 64"><use xlink:href="#arrow-right-1"></use></svg></span>
                         <div>
                             <h3>对角线构图法</h3>
