--- a/index.html
+++ b/index.html
@@ -1,289 +1,157 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Photoshop基本后期调色</title>
-<script>
-	//设置字体大小
-	function setFont(size){
-		var obj=document.getElementById("strong");
-		obj.style.height=size*height;
-		//obj.style.color="#ff0000"
-	}
-</script>
-<style type="text/css">
-body,ul,h2,h3,h4,form,input,textarea,select{padding:0;margin:0;}
-li{list-style:none;}
-img{border:none;}
-a{text-decoration:none;}
-a.hover{text-decoration:underline;}
-	
-*{padding:0; margin:0}
-	body{
-		background-color:black;
-		width:100%;
-	}
-	.container{                    /*最大的div*/
-		background-color:black;
-		width:1024px;
-		height:86vh;
-		display: flex;
-		margin: auto;
-		box-sizing: border-box;
-		position: relative;
-		position:fixed;
-		left:0;
-		right:0;
-		top:0;
-		bottom:0;
-		margin:auto;
-	}
-	.container ul li{                     
-		float:left;
-		list-style-type: none;
-	}
-	.album{                     /*图片*/
-		float: left;
-		//overflow:hidden;
-		transition:width 2s, height 2s;
-	-moz-transition:width 1s, height 1s, -moz-transform 1s; /* Firefox 4 */
-	-webkit-transition:width 1s, height 1s, -webkit-transform 1s; /* Safari and Chrome */
-	-o-transition:width 1s, height 1s, -o-transform 1s; /* Opera */
-	}
-	.album img:hover{    
-		z-index: 999;
-		/*图片放大*/
-	transform:scale(1.1);
-            -webkit-transform:scale(1.1);
-            -moz-transform:scale(1.1);
-            -o-transform:scale(1.1);
-            -ms-transform:scale(1.1);
-	}
-	#nav{                          /*按钮*/
-		position:absolute;
-		z-index: 999;
-		margin-left:74%;
-		padding-top:33%;
-	}
-	#nav ul li{
-	width:400%;
-	float: inherit;
-	list-style-type: none;
-	background-color:rgba(116,21,22,1.00);
-	text-align: center;
-	margin-top:40%;
-	
-		/*鼠标放上时背景变化时间*/
-	transition:background-color 1s linear;
-	-webkit-transition:background-color 1s  linear;
-	-moz-transition:background-color 1s  linear;
-	-o-transition:background-color 1s  linear;
-	}
-	
-	/*菜单栏显示样式*/ 
-	#nav>ul>li>a       /*栏目链接样式*/
-	{
-		font-size:26px;
-		line-height:40px;
-		font-weight: bolder;
-		font-family:STXingkai;
-		word-spacing:1.2rem;
-		font-weight:lighter;
-		
-		text-decoration: none;
-		color:white;
-	}
-	
-	#nav>ul>li:hover  /*鼠标经过变色*/
-	{
-		//background-color:rgb(69, 0, 183);
-		background-color:black;
-	
-	}
-	.title1{
-		/*margin-top:20px;
-		margin-left:400px;*/
-		
-		font-family: Helvetica Regular,sans-serif;
-        //word-spacing:2.5rem;
-        line-height:4rem;
-        font-weight: bold;
-		//color: rgba(114,0,1,1.00);
-		color:white;
-		font-size:4.5rem;
-	}
-	#t1{
-		position:absolute;
-		margin-left:59.5%;
-		top:17%;
-		width:100%;
-	}
-	#big{
-		width:100%;
-		margin-top: -50px;
-	}
-/*************************************
-Build the scene and rotate on hover
-**************************************/	
-.wrapper {
-	position: absolute;
-	width: 100%;
-	margin-left:40%;
-	margin-top:26%;
-}
-.stage {
-	list-style: none;
-	padding: 0;
-}
-.scene {
-	//background-color: aqua;
-	width:300px;
-	height:420px;
-	margin: 30px;
-	float: left;
-	-webkit-perspective: 1000px;
-	-moz-perspective: 1000px;
-	perspective: 1000px;
-}
+    <meta charset="utf-8">
+    <title>Photoshop基本后期调色</title>
 
-.movie {
-	width: 460px;
-	height:700px;
-	-webkit-transform-style: preserve-3d;
-	-moz-transform-style: preserve-3d;
-	transform-style: preserve-3d;
-	-webkit-transform: translateZ(-130px);
-	-moz-transform: translateZ(-130px);
-	transform: translateZ(-130px);
-	-webkit-transition: -webkit-transform 350ms;
-	-moz-transition: -moz-transform 350ms;
-	transition: transform 350ms;
-}
+    <style type="text/css">
+        body, ul, h2, h3, h4, form, input, textarea, select {
+            padding: 0;
+            margin: 0;
+        }
 
-.movie:hover {
-	-webkit-transform: rotateY(-78deg) translateZ(20px);
-	-moz-transform: rotateY(-78deg) translateZ(20px);
-	transform: rotateY(-78deg) translateZ(20px);
-}
+        img {
+            border: none;
+        }
 
-/*************************************
-Transform and style the two planes
-**************************************/
+        * {
+            padding: 0;
+            margin: 0
+        }
+        body {
+            background-color: black;
+            width: 100%;
+        }
 
-.movie .poster, 
-.movie .info {
-	position: absolute;
-	width:54%;
-	height:49%;
-	background-color: #fff;
-	-webkit-backface-visibility: hidden;
-	-moz-backface-visibility: hidden;
-	backface-visibility: hidden;
-	
-	-webkit-transform: rotateY(90deg) translateZ(130px);
-	-moz-transform: rotateY(90deg) translateZ(130px);
-	transform: rotateY(90deg) translateZ(130px);
-	border: 1px solid #B8B5B5;
-	font-size: 0.75em;
-}
-.movie .poster  {
-	-webkit-transform: translateZ(130px);
-	-moz-transform: translateZ(130px);
-	transform: translateZ(130px);
-	background-size: cover;
-	background-repeat: no-repeat;
-}
+        .container { /*最大的div*/
+            background-image: url("image/index1.jpg");
+            width: 100%;
+            height: 100vh;
+            margin: auto;
+            position: relative;
+            background-size: cover;
+        }
+
+        /*标题*/
+        #title_slide {
+            /*background-color: red;*/
+            width:600px;
+            position: absolute;
+            left:50%;
+            margin-left:-300px;
+            top: 16%;
+            text-align: center;
+        }
+
+        .title {
+            /*line-height:10vh;*/
+
+            /*font-weight: bold;*/
+            color: #e2dedf;
+        }
+        #t_Entlish {
+            font-size: 15vh;
+            word-spacing: 5px;
+            font-family:'Bodoni MT';
+        }
+        #t_Chinese {
+            font-size: 8vh;
+            letter-spacing: 5px;
+            font-family: HYZHONGXIUTIJ;
+        }
+
+        @font-face {
+            font-family: "HYZHONGXIUTIJ";
+            src: url("font/HYZHONGXIUTIJ.TTF")
+        }
+
+        /*按钮*/
+
+        #button_slide {
+            position: absolute;
+            width: 80%;
+            top: 53%;
+            left: 10%;
+        }
+
+        #button_slide_left {
+            width: 50%;
+            /*background-color: red;*/
+            height: 100px;
+            float: left;
+        }
+
+        #button_slide_right {
+            width: 50%;
+            /*background-color: rebeccapurple;*/
+            height: 100px;
+            float: left;
+        }
+
+        .btn {
+            margin: 0 auto;
+            display: block;
+            width: 55%;
+            list-style-type: none;
+            text-align: center;
+            padding: 2vh;
+            border-radius: 17px;
+            border: solid 1px #e2dedf;
+            margin-top: 50px;
+            background-color: transparent;
+            /*字体*/
+            font-size: 3vh;
+            font-family: HYZHONGXIUTIJ;
+            letter-spacing:5px;
+            /*鼠标放上时背景变化时间*/
+            transition: background-color 1.4s ease;
+            -webkit-transition: background-color 1.4s ease;
+            -moz-transition: background-color 1.4s ease;
+            -o-transition: background-color 1.4s ease;
+        }
+
+        .btn_left {
+            background-color: #e2dedf;
+        }
+
+        .btn_right {
+            color:white;
+        }
 
 
-.info header {
-	color: #FFF;
-	padding: 7px 10px;
-	font-weight: bold;
-	height: 195px;
-	background-size: contain;
-	background-repeat: no-repeat;
-	text-shadow: 0px 1px 1px rgba(0,0,0,1);
-}
-.info header h1 {
-	margin: 0 0 2px;
-	font-size: 1.4em;
-}
+        .btn_left:hover /*鼠标经过变色*/ {
+            background-color: transparent;
+            color: white;
+            cursor: pointer;
+        }
 
-.info header .rating {
-	border: 1px solid #FFF;
-	padding: 0px 3px;
-}
+        .btn_right:hover /*鼠标经过变色*/ {
+            background-color: #e2dedf;
+            color: black;
+            cursor: pointer;
+        }
 
-.info p {
-	//padding: 1.2em 1.4em;
-	//margin: 2px 0 0;
-	font-weight: 700;
-	color: #666;
-	line-height: 1.4em;
-	border-top: 10px solid #555;
-}
-.scene:nth-child(1) .movie .poster {
-  background-image: url(image/4.jpg);
-	border-color: black;
-	border-width: 20px;
-	border-right: 20px;
-	border-bottom:20px;
-}
-
-.scene:nth-child(1) .info header {
-	background-image: url(image/5.jpg);
-}
-</style>
+    </style>
 </head>
 
 <body style="overflow-x:hidden;overflow-y:hidden">
-	<div class="container"> 
-	<ul>
-		<li class="album"><img id="big" alt="" src="image/6.jpg" /></li>
-			
-	<div class="wrapper">
-				<ul class="stage clearfix">
-					<li class="scene">
-						<div class="movie" onclick="return true">
-							<div class="poster"></div>
-							<div class="info">
-								<header>
-									<h1>It's a Wonderful Life</h1>
-									<span class="year">1946</span>
-									<span class="rating">PG</span>
-									<span class="duration">130 minutes</span>
-								</header>
-								<p>
-									Thoreau said,"Most men lead lives of quiet desperation."
-								</p>
-							</div>
-						</div>
-					</li>
+    <div class="container">
+        <div id="title_slide">
+            <p class="title" id="t_Entlish">Photoshop</p>
+            <p class="title" id="t_Chinese">基础后期构图与调色</p>
+        </div>
 
-				</ul>
-			</div><!-- /wrapper -->
-	
-		<!--
-			<li class="album" id="over">
-			<img  border="10" height="270" alt=""src="image/DSC00606.png"/></a></li>
-			-->
-		</ul>
-		<p class="title1" id="t1">Photoshop<br>
-		<img src="image/title.jpg" width="400" alt=""><br></p>
-   
-<div id="nav">
-	<ul>
-		<li><a href="composition.html">构图</a>
-		</li>
-		<li><a href="html/colourstyle.html">调色</a>
-		</li>
-		<li><a href="html/main-test.html">测试</a>
-		</li>
-		<li><a href="album.html">相册</a>
-		</li>
-		
-	</ul>
-</div>
- </div>
+
+        <div id="button_slide">
+            <div id="button_slide_left">
+                <input class="btn btn_left" type=button value="构图" onclick="window.open('html/composition.html')">
+                <input class="btn btn_left" type=button value="调色" onclick="window.open('html/colourstyle.html')">
+            </div>
+            <div id="button_slide_right">
+                <input class="btn btn_right" type=button value="测试" onclick="window.open('html/main-test.html')">
+                <input class="btn btn_right" type=button value="相册" onclick="window.open('html/album.html')">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
